--- a/extraFiles/package.json
+++ b/extraFiles/package.json
@@ -3,6 +3,7 @@
     "@binance/connector": "^3.6.1",
     "@binance/connector-typescript": "^0.3.16",
     "axios": "^1.9.0",
+    "big.js": "^7.0.1",
     "mysql2": "^3.14.1"
   }
 }
