--- a/trade_api/package.json
+++ b/trade_api/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.1297.0",
     "axios": "^1.2.6",
     "bcrypt": "^5.1.1",
+    "big.js": "^7.0.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@binance/connector-typescript": "^0.3.11",
+    "@types/big.js": "^6.2.2",
     "@types/connect": "^3.4.38",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
